--- a/.github/workflow/pipeline.yaml
+++ b/.github/workflow/pipeline.yaml
@@ -3,11 +3,28 @@ name: Code Style Check
 on: 
   push: 
     branches:
-      - vetka
+      - vetka2
 
   pull_request: 
     branches:
-      - vetka
+      - vetka2
 
 jobs:
   checkstyle_project:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git clone repo
+        uses: actions/checkout@v2
+      
+      - name: Set version Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.7'
+
+      - name: Install dependencies
+        run: |
+          pip install flake8
+      
+      - name: Run linter
+        run: |
+          flake8 .
